fix overflowing gradient

--- a/apps/frontend/src/pages/Index/Index.module.scss
+++ b/apps/frontend/src/pages/Index/Index.module.scss
@@ -165,7 +165,7 @@
 			position: absolute;
 			right: 0;
 			width: 100%;
-			height: 100%;
+			height: 50%;
 			background: radial-gradient(
 				90.33% 88.77% at 0% 60.99%,
 				#e4dffa 0%,
